--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti": "^6.2.2",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
